stacks/sosivio/assets/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-lb
  namespace: sosivio
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8088
  selector:
    app: sosivio-dashboard
  sessionAffinity: None
  type: LoadBalancer
